--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Blog</title>
+    <title>Welcome!</title>
     <link rel="stylesheet"
 type="text/css" href="style.css">
 </head>
