--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@ type="text/css" href="style.css">
   <div class="container">
     <div class="about">
       <div class="about-author">
-        <img src="/Users/nickdeleon1/Documents/blog/roomi photo.jpg">
+        <img src="ME.png">
       </div>
       <h1 class="about-title">About Me</h1>
       <div class="about-content">
