--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 type="text/css" href="style.css">
 </head>
 <body>
+    <body background="ME.PNG">
   <div id="header">
     <div class="container">
       <a id="header-title"
