--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ type="text/css" href="style.css">
 </head>
 <body>
     <body background="ME.PNG">
+    </body>
   <div id="header">
     <div class="container">
       <a id="header-title"
