--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 type="text/css" href="style.css">
 </head>
 <body>
-    <body background="ME.PNG">
-    </body>
+ <meta property="og:image" content="ME.png">
   <div id="header">
     <div class="container">
       <a id="header-title"
