--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ type="text/css" href="style.css">
 <meta property="og:description" content="I tought myself HTML and CSS and made this! Let me know what you think."/>
 <meta property="og:image" content="ME.png">
 <meta property="og:url" content="https://nickdeleon.github.io/">
-<meta property="og:type" content="website"/>
+<meta property="og:type" content="LinkedIn"/>
 </head>
 <body>
   <body background="ME.jpg">
