--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Welcome!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
 type="text/css" href="style.css">
 <meta property="og:site_name" content="nickdeleon.github.io"/>
